--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: cppSim
-Title: Fast and efficient spatial interaction model
+Title: Fast and memory efficient spatial interaction model
 Version: 0.0.0.9000
 Authors@R: 
     person("Ivann", "Schlosser", , "ivann.schlosser.19@ucl.ac.uk", role = c("aut", "cre"),
@@ -9,7 +9,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Imports: Rcpp
+Imports: 
+    Rcpp,
+    RcppParallel
 LinkingTo: 
     Rcpp,
     RcppArmadillo
