--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,21 @@
 Package: cppSim
-Title: Fast and memory efficient spatial interaction model
+Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("Ivann", "Schlosser", , "ivann.schlosser.19@ucl.ac.uk", role = c("aut", "cre"),
+    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Spatial interaction model in R with a cpp backend for memory efficiency and speed. 
+Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Imports: 
+Imports:
     Rcpp,
     RcppParallel
 LinkingTo: 
     Rcpp,
     RcppArmadillo
-Depends: 
-    R (>= 2.10)
+Depends:
+	R (>= 2.10)
 LazyData: true
 LazyDataCompression: bzip2
