--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports:
-    Rcpp,
-    RcppParallel
+    Rcpp
 LinkingTo: 
     Rcpp,
     RcppArmadillo
