updated the data sets to the original ones, added a vignette draft

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: cppSim
 Title: Fast and memory efficient spatial interaction models
 Version: 0.1
 Authors@R: 
-    person("Ivann", , "Schlosser", "ivann.schlosser.19@ucl.ac.uk", role = c("aut", "cre")
+    person("Ivann", "Schlosser", , "ivann.schlosser.19@ucl.ac.uk", role = c("aut", "cre")
+		,comment = c(ORCID = "0009-0004-4099-3198")
            )
 Description: This package builds on top of RcppArmadillo to provide an API to do fast spatial interaction models in the context of urban analytics, geography, transport modelling. It uses the Newton root search algorithm to determine the optimal cost exponent and can run country level models with thousands of origins and destinations. It aims at implementing an easy approach based on matrices. Currently, the simplest form of production, destination and doubly constrained models are implemented. 
 License: MIT + file LICENSE
@@ -11,7 +12,6 @@ URL: https://ischlo.github.io/cppSim/, https://github.com/ischlo/cppSim
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports:
-    quarto,
     Rcpp
 LinkingTo: 
     Rcpp,
@@ -22,5 +22,10 @@ LazyData: true
 LazyDataCompression: bzip2
 Suggests: 
     knitr,
+    quarto,
     rmarkdown
-VignetteBuilder: quarto
+VignetteBuilder: 
+    knitr
+Config/testthat/edition: 3
+SystemRequirements: Quarto command line tools
+    (https://github.com/quarto-dev/quarto-cli).
