--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,8 @@ URL: https://ischlo.github.io/cppSim/, https://github.com/ischlo/cppSim
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports:
-    Rcpp,
-    sf
+    cli,
+    Rcpp
 LinkingTo: 
     Rcpp,
     RcppArmadillo
@@ -26,7 +26,8 @@ LazyDataCompression: bzip2
 Suggests: 
     knitr,
     quarto,
-    rmarkdown
+    rmarkdown,
+    sf
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
