--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports:
     cli,
-    Rcpp
+    Rcpp,
+    rlist
 LinkingTo: 
     Rcpp,
     RcppArmadillo
