rerun the ghactions after cleanup

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,37 +2,43 @@ Package: cppSim
 Title: Fast and memory efficient spatial interaction models
 Version: 0.2
 Authors@R: 
-    person("Ivann", "Schlosser", , "ivann.schlosser.19@ucl.ac.uk", role = c("aut", "cre")
-		,comment = c(ORCID = "0009-0004-4099-3198")
-           )
+    person("Ivann", "Schlosser", , "ivann.schlosser.19@ucl.ac.uk", role = c("aut", "cre"),
+           comment = c(ORCID = "0009-0004-4099-3198"))
 Author: Ivann Schlosser [auth,cre],
 Maintainer: Ivann Schlosser <ivann.schlosser.19@ucl.ac.uk>
-Description: This package builds on top of the RcppArmadillo linear algebra functionalities to do fast spatial interaction models in the context of urban analytics, geography, transport modelling. It uses the Newton root search algorithm to determine the optimal cost exponent and can run country level models with thousands of origins and destinations. It aims at implementing an easy approach based on matrices. Currently, the simplest form of production, destination and doubly constrained models are implemented. 
+Description: This package builds on top of the RcppArmadillo linear
+    algebra functionalities to do fast spatial interaction models in the
+    context of urban analytics, geography, transport modelling. It uses
+    the Newton root search algorithm to determine the optimal cost
+    exponent and can run country level models with thousands of origins
+    and destinations. It aims at implementing an easy approach based on
+    matrices. Currently, the simplest form of production, destination and
+    doubly constrained models are implemented.
 License: MIT + file LICENSE
-Encoding: UTF-8
 URL: https://ischlo.github.io/cppSim/, https://github.com/ischlo/cppSim
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+Depends:
+    R (>= 2.10)
 Imports:
     cli,
+    Rcpp
+Suggests: 
     data.table,
     foreach,
-    Rcpp,
-    rlist
+    knitr,
+    rlist,
+    rmarkdown,
+    sf,
+    testthat (>= 3.0.0)
 LinkingTo: 
     Rcpp,
     RcppArmadillo
-Depends:
-	R (>= 2.10)
-LazyData: true
-LazyDataCompression: bzip2
-Suggests: 
-    knitr,
-    quarto,
-    rmarkdown,
-    sf
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
+Encoding: UTF-8
+LazyData: true
+LazyDataCompression: bzip2
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.1
 SystemRequirements: Quarto command line tools
     (https://github.com/quarto-dev/quarto-cli).
