--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,9 @@
 Package: cppSim
 Title: Fast and Memory Efficient Spatial Interaction Models
 Version: 0.2
+Author: 
+    person("Ivann", "Schlosser", , "ivann.schlosser.19@ucl.ac.uk", role = c("aut", "cre"),
+           comment = c(ORCID = "0009-0004-4099-3198"))
 Authors@R: 
     person("Ivann", "Schlosser", , "ivann.schlosser.19@ucl.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0004-4099-3198"))
