--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -46,5 +46,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.5.0
         with:
           clean: false
-          branch: main
+          branch: gh-pages
           folder: docs
+          permissions:
+            contents: write
